OpenRewrite changes for JDK21