@@ -31,7 +31,6 @@ import java.util.List;
 import java.util.Locale;
 
 import org.apache.log4j.Logger;
-import org.springframework.beans.factory.annotation.Required;
 
 import com.energizer.core.model.EnergizerCategoryModel;
 import com.energizer.core.model.EnergizerProductModel;
@@ -95,8 +94,8 @@ public class EnergizerProductSegmentValueProvider extends AbstractPropertyFieldV
 
 									for (final String fieldName : names)
 									{
-										fieldValues.add(new FieldValue(fieldName, segment.getName(new Locale(language.getIsocode()))));
-										LOG.debug("Segment added  :" + segment.getName(new Locale(language.getIsocode())));
+										fieldValues.add(new FieldValue(fieldName, segment.getName(Locale.of(language.getIsocode()))));
+										LOG.debug("Segment added  :" + segment.getName(Locale.of(language.getIsocode())));
 									}
 
 								}
@@ -131,7 +130,6 @@ public class EnergizerProductSegmentValueProvider extends AbstractPropertyFieldV
 		return fieldNameProvider;
 	}
 
-	@Required
 	public void setFieldNameProvider(final FieldNameProvider fieldNameProvider)
 	{
 		this.fieldNameProvider = fieldNameProvider;
